--- a/src/css/body.css
+++ b/src/css/body.css
@@ -9,23 +9,55 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
-body main {
+body main section {
   flex: 1;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   min-height: 100vh;
 }
-body main h1 {
+body main section .title {
+  margin-top: 200px;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(240, 248, 255, 0.534);
+  width: 100%;
+  margin-bottom: 40px;
+}
+body main section .title h1 {
   font-family: "Tilt Prism", cursive;
-  color: rgb(67, 165, 42);
+  color: rgb(0, 0, 0);
   text-transform: uppercase;
 }
-body main h3 {
+body main section .title h3 {
   margin-top: 40px;
   text-transform: uppercase;
   font-family: "Tilt Prism", cursive;
+}
+body main section .files {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(240, 248, 255, 0.534);
+  width: 100%;
+  margin-bottom: 40px;
+  padding-left: 10px;
+  align-items: center;
+}
+body main section .files h4 {
+  margin-bottom: 30px;
+}
+body main section .files .icon {
+  font-size: 24px;
+  margin: 20px;
+}
+body main section .files .icon:hover {
+  color: rgb(255, 0, 0);
+}
+body main section .files .icon-link {
+  display: inline-flex;
+  color: #000000;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (min-width: 1024px) {
