--- a/src/css/body.scss
+++ b/src/css/body.scss
@@ -11,18 +11,24 @@ body{
     flex-direction: column;
     min-height: 100vh;
 
-    main{
+    main section{
         flex: 1;
         display: flex;
-        justify-content: center;
         align-items: center;
         flex-direction: column;
         min-height: 100vh;
 
-    
+    .title{
+        margin-top: 200px;
+        align-items: center;
+        text-align: center;
+        background-color: rgba(240, 248, 255, 0.534);
+        width: 100%;
+        margin-bottom: 40px;
+
     h1{
         font-family: 'Tilt Prism', cursive;
-        color: rgb(67, 165, 42);
+        color: rgb(0, 0, 0);
         text-transform: uppercase;
         
       }
@@ -32,7 +38,34 @@ body{
         margin-top: 40px;
         text-transform: uppercase;
         font-family: 'Tilt Prism', cursive;
-    }
+    }}
+    .files{
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(240, 248, 255, 0.534);
+        width: 100%;
+        margin-bottom: 40px;
+        padding-left:  10px;
+        align-items: center;
+    h4{
+       margin-bottom: 30px;
+    }    
+
+    .icon {
+        font-size: 24px;
+        margin: 20px; 
+        &:hover{
+            color: rgb(255, 0, 0);
+        }
+}
+
+    .icon-link {
+        display: inline-flex;
+        color: #000000;
+        align-items: center;
+        justify-content: center;
+}}
+
 }
 }
 
