--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,11 +11,39 @@ footer .footer-container {
   flex-direction: column;
   background-color: rgba(240, 248, 255, 0.534);
 }
+footer .footer-container .copyright {
+  margin-top: 15px;
+  font-size: 12px;
+}
+footer .footer-container .aboutUs {
+  margin: 6px;
+  border: solid 4px rgba(255, 255, 255, 0.4588235294);
+  border-radius: 10px;
+  padding: 6px;
+  cursor: pointer;
+}
+footer .footer-container .aboutUs:hover {
+  opacity: 0.8;
+}
+footer .footer-container .aboutUs h3 {
+  margin-bottom: 20px;
+}
+footer .footer-container .contact {
+  margin: 6px;
+  border: solid 4px rgba(255, 255, 255, 0.4588235294);
+  border-radius: 10px;
+  padding: 6px;
+  width: 98%;
+}
+footer .footer-container .contact:hover {
+  opacity: 0.8;
+}
 footer .footer-container .contact form {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   font-size: 16px;
 }
 footer .footer-container .contact form input {
@@ -29,7 +57,7 @@ footer .footer-container .contact form input {
 footer .footer-container .contact form input:focus {
   border: 2px solid rgb(0, 206, 158);
 }
-footer .footer-container .contact form textarea {
+footer .footer-container .contact textarea {
   max-width: 100%;
   min-width: 100%;
   width: 100%;
@@ -40,13 +68,13 @@ footer .footer-container .contact form textarea {
   border-radius: 5px;
   border: 1px solid rgb(220, 220, 220);
 }
-footer .footer-container .contact form textarea:focus {
+footer .footer-container .contact textarea:focus {
   border: 2px solid rgb(0, 206, 158);
 }
-footer .footer-container .contact form label {
+footer .footer-container .contact label {
   margin-top: 1rem;
 }
-footer .footer-container .contact form input[type=submit] {
+footer .footer-container .contact input[type=submit] {
   margin-top: 2rem;
   cursor: pointer;
   background: rgb(249, 105, 14);
