--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -8,7 +8,7 @@
 }
 
 :root{
-    --mainColor: #4264eefb;
+    --mainColor: #5c5237fb;
     --mainColorLigh: #798ace;
     --secondaryColor: #DB2B39;
     --textColor: #eee;
@@ -25,6 +25,7 @@ header{
 
     h3{
         font-size: 16px;
+        cursor: pointer;
     }
 
     nav a{
