--- a/src/pages/Contact/contactStyle.scss
+++ b/src/pages/Contact/contactStyle.scss
@@ -8,50 +8,136 @@
     
 }
 
- .container-body .form form {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    background-color: rgba(240, 248, 255, 0.534);
+.contaktMe{
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(240, 248, 255, 0.534);
+
+.contactForm{
+  h3{
+      padding: 10px;
+      margin-left: 15px;
+
+  }
+  form {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+ 
+  font-size: 16px;
+  margin-left: 10px;
+  margin-right: 10px;
+  input {
+  width: 100%;
+  height: 35px;
+  padding: 7px;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid rgb(220, 220, 220);
+  &:focus {
+    border: 2px solid rgba(0, 206, 158, 1);
+  }
+}}
+  textarea {
+    max-width: 100%;
+    min-width: 100%;
     width: 100%;
-    padding: 10px;
-    height: 100%;
-    font-size: 16px;
-    input {
-    width: 100%;
-    height: 35px;
+    max-height: 200px;
+    min-height: 100px;
     padding: 7px;
     outline: none;
     border-radius: 5px;
     border: 1px solid rgb(220, 220, 220);
-    &:focus {
-      border: 2px solid rgba(0, 206, 158, 1);
+      &:focus {
+        border: 2px solid rgba(0, 206, 158, 1);
+}
+}
+  label {
+    margin-top: 1rem;
+  }
+  input[type="submit"] {
+      margin-top: 2rem;
+      cursor: pointer;
+      background: rgba(241, 137, 0, 0.815);
+      color: rgb(255, 255, 255);
+      border: none;
+      font-weight: 600;
     }
-}}
-    textarea {
-      max-width: 100%;
-      min-width: 100%;
-      width: 100%;
-      max-height: 200px;
-      min-height: 100px;
-      padding: 7px;
-      outline: none;
-      border-radius: 5px;
-      border: 1px solid rgb(220, 220, 220);
-        &:focus {
-          border: 2px solid rgba(0, 206, 158, 1);
+  }
+  .address{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 6px;
+      border: solid 4px #ffffff75;
+      border-radius: 10px;
+      padding: 6px;
+     .email{
+
+      a{
+          color: black;
+          &:hover{
+              text-transform: uppercase;
+              color: red;
+              
+          }
+      }
+     }
+     .addressMap { 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      a{
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          margin-top: 25px;
+          color: black;
+          
+          &:hover{
+              text-transform: uppercase;
+              color: red;
+              
+          }
+          
+     }
+     p{
+      margin-left: 20px;
+     }
+  }
   }
 }
-    label {
-      margin-top: 1rem;
-    }
-    input[type="submit"] {
-        margin-top: 2rem;
-        cursor: pointer;
-        background: rgba(241, 137, 0, 0.815);
-        color: rgb(255, 255, 255);
-        border: none;
-        font-weight: 600;
+  @media only screen and (min-width: 1024px){
+
+      .contaktMe{
+          display: flex;
+          flex-direction: column;
+          height: 80vh;
+          align-items: center;
+          .contactForm{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          h3{
+              font-size: 30px;
+              margin-top: 40px;
+          }
+
+          form{
+          width: 600px;
+          margin-bottom: 30px;
       }
-   
-    
+  }   
+  .address{
+      display: flex;
+      width: 600px;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      margin: 0;
+  }        
+}
+      
+}
