add style and finished chat

--- a/src/Components/Header/css/header.scss
+++ b/src/Components/Header/css/header.scss
@@ -9,7 +9,7 @@
 }
 
 :root{
-    --mainColor: #8b969efb;
+    --mainColor: #1BBAF7;
     --mainColorLigh: #798ace;
     --secondaryColor: #DB2B39;
     --textColor: #eee;
