--- a/src/Components/Footer/css/footer.css
+++ b/src/Components/Footer/css/footer.css
@@ -91,7 +91,7 @@ footer .footer-container .contact label {
 footer .footer-container .contact input[type=submit] {
   margin-top: 2rem;
   cursor: pointer;
-  background: rgba(241, 137, 0, 0.815);
+  background: #1BBAF7;
   color: rgb(255, 255, 255);
   border: none;
   font-weight: 600;
