--- a/src/Components/Footer/css/footer.scss
+++ b/src/Components/Footer/css/footer.scss
@@ -94,15 +94,11 @@ footer {
         input[type="submit"] {
             margin-top: 2rem;
             cursor: pointer;
-            background: rgba(241, 137, 0, 0.815);
+            background: #1BBAF7;
             color: rgb(255, 255, 255);
             border: none;
             font-weight: 600;
           }
   } }}
     
-  @media only screen and (min-width: 1024px){
-    
-  }
-
-  
+ 
