--- a/src/pages/Contact/contactStyle.css
+++ b/src/pages/Contact/contactStyle.css
@@ -53,7 +53,7 @@
 .contaktMe .contactForm input[type=submit] {
   margin-top: 2rem;
   cursor: pointer;
-  background: rgba(241, 137, 0, 0.815);
+  background: #1BBAF7;
   color: rgb(255, 255, 255);
   border: none;
   font-weight: 600;
