--- a/src/pages/Home/homeStyle.scss
+++ b/src/pages/Home/homeStyle.scss
@@ -17,7 +17,7 @@ body{
         display: flex;
         align-items: center;
         flex-direction: column;
-        min-height: 60vh;
+        height: 100vh;
         background-color: rgba(255, 255, 255, 0.508);
 
 
