--- a/src/Components/Footer/css/footer.css
+++ b/src/Components/Footer/css/footer.css
@@ -17,6 +17,7 @@ footer .copyright {
 }
 footer .footer-container {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   background-color: rgba(240, 248, 255, 0.534);
