--- a/src/Components/Footer/css/footer.scss
+++ b/src/Components/Footer/css/footer.scss
@@ -19,11 +19,10 @@ footer {
   }
     .footer-container{
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: rgba(240, 248, 255, 0.534);
-
-      
 
       a {
         text-decoration: none;
