--- a/src/Components/Header/css/header.css
+++ b/src/Components/Header/css/header.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-  --mainColor: #1BBAF7;
+  --mainColor: #1bbaf7;
   --mainColorLigh: #798ace;
   --secondaryColor: #DB2B39;
   --textColor: #eee;
