--- a/src/Components/Chat/css/chatComponentStyle.scss
+++ b/src/Components/Chat/css/chatComponentStyle.scss
@@ -1,216 +1,218 @@
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-    main {
-     width: 100%;
-     height: 100%;   
-    section {
-    width: 100%;
-    height: 100%;
-    .chat-room {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow: visible;
+  main {
+   width: 100%;
+   height: 100%;   
+  section {
+  width: 100%;
+  height: 100%;
+  .chat-room {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: visible;
 
-    h1 {
-        font-family: 'Tilt Prism', cursive;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        margin-top: 15px;
-      }
-     .activeUsers{ 
-        .NumRoom{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-             p{
-        display: inline-block;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        border: 1px solid #1e8449;
-        background-color: #1e8449;
-        color: white;
-        border-radius: 15px;
-        padding: 3px;
-        font-weight: 600;
-      }
-    }
-}
-.messages {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    overflow-y: scroll;
-    margin-bottom: 10px;
-    
-    .message {
+  h1 {
+      font-family: 'Tilt Prism', cursive;
       display: flex;
       flex-direction: column;
-      margin-bottom: 10px;
-      
-      .member {
-        margin-bottom: 5px;
-      }
-      
-      div {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        
-        h4 {
-          margin: 0;
-          
-        }
-        
-        p {
-          margin: 5px 0 0 0;
-          padding: 10px;
-          border-radius: 10px;
-          font-size: 1.1rem;
-        }
-        
-        .sendTime {
-          margin-top: 5px;
-        }
-      }
-      
-      &.sender {
-        align-self: flex-end;
-        border: blue;
-        div {
-            align-items: flex-end;
-          h4 {
-            display: flex;
-            text-align: right;
-            color: rgb(0, 0, 0);
-            font-family: 'Courier New', Courier, monospace;           
-
-          }
-          p {
-            background-color: blue;
-            color: white;
-          }
-        }
-      }
-      
-      &.receiver {
-        align-self: flex-start;
-        border: #1e8449;
-        div {
-            align-items: flex-start;
-          h4 {
-            display: flex;
-            text-align: right;
-            color: rgb(0, 0, 0);
-            font-family: 'Courier New', Courier, monospace;
-          }
-          p {
-            background-color: green;
-            color: white;
-          }
-        }
-      }
+      align-items: center;
+      text-align: center;
+      margin-top: 15px;
+    }
+   .activeUsers{ 
+      .NumRoom{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+           p{
+      display: inline-block;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      border: 1px solid #1e8449;
+      background-color: #1e8449;
+      color: white;
+      border-radius: 15px;
+      padding: 3px;
+      font-weight: 600;
     }
   }
-
+}
+.messages {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  overflow-y: scroll;
+  margin-bottom: 10px;
+  
+  .message {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
     
-    form {
-        position: fixed;
-        overflow: visible;
-        bottom: 0;
-        left: 0;
-        padding: 5px;
-        margin-top: 10px;
-        width: 100%;
+    .member {
+      margin-bottom: 5px;
+    }
+    
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
       
-      input[type="text"] {
-        padding: 10px;
-        border-radius: 20px;
-        border: none;
-        background-color: #ffffff;
-        box-shadow: 0 0 5px rgba(173, 162, 162, 0.3);
-        font-size: 16px; 
-        width:80% ;      
+      h4 {
+        margin: 0;
+        
       }
       
-      button {
-        border: none;
-        border-radius: 20px;
-        background-color: #3498db;
-        color: #fff;
-        font-weight: bold;
-        font-size: 16px;
-        width: 20%;
-        height: 45px;
-        
+      p {
+        margin: 5px 0 0 0;
+        padding: 10px;
+        border-radius: 10px;
+        font-size: 1.1rem;
+      }
+      
+      .sendTime {
+        margin-top: 5px;
+      }
+    }
+    
+    &.sender {
+      align-self: flex-end;
+      border: blue;
+      div {
+          align-items: flex-end;
+        h4 {
+          display: flex;
+          text-align: right;
+          color: rgb(0, 0, 0);
+          font-family: 'Courier New', Courier, monospace;           
 
+        }
+        p {
+          background-color: blue;
+          color: white;
+        }
+      }
+    }
+    
+    &.receiver {
+      align-self: flex-start;
+      border: #1e8449;
+      div {
+          align-items: flex-start;
+        h4 {
+          display: flex;
+          text-align: right;
+          color: rgb(0, 0, 0);
+          font-family: 'Courier New', Courier, monospace;
+        }
+        p {
+          background-color: green;
+          color: white;
+        }
       }
     }
   }
+}
+
+  
+  form {
+      position: fixed;
+      overflow: visible;
+      bottom: 0;
+      left: 0;
+      padding: 5px;
+      margin-top: 10px;
+      width: 100%;
+    
+    input[type="text"] {
+      padding: 10px;
+      border-radius: 20px;
+      border: none;
+      background-color: #ffffff;
+      box-shadow: 0 0 5px rgba(173, 162, 162, 0.3);
+      font-size: 16px; 
+      width:80% ;      
+    }
+    
+    button {
+      border: none;
+      border-radius: 20px;
+      background-color: #3498db;
+      color: #fff;
+      font-weight: bold;
+      font-size: 16px;
+      width: 20%;
+      height: 45px;
+      
+
+    }
+  }
+}
 } 
 }
 
 @media only screen and (min-width: 1024px) {
 
 
-    main {
+  main {
+      width: 100%;
+      height: 100%;
+    
+      section {
         width: 100%;
         height: 100%;
-      
-        section {
-          width: 100%;
-          height: 100%;
-      
-          .chat-room {
-            width: 50%;
-            height: 70%;
-            display: flex;
-            flex-direction: column;
-            overflow-y: hidden;
-            
-            
+    
+        .chat-room {
+          width: 50%;
+          height: 90%;
+          display: flex;
+          flex-direction: column;
+          overflow-y: hidden;        
+         .messages{
+          margin-top: 30px;
+         }
+        
+    
+        form {
+          height: 45px;
+          padding: 5px;
+          margin-top: 20px;
+          margin-bottom: 20px;
+          position: relative;
+          justify-content:space-evenly ;
+
+    
+          input[type="text"] {
+            padding: 10px;
+            border-radius: 20px;
+            border: none;
+            background-color: #ffffff;
+            box-shadow: 0 0 5px rgba(173, 162, 162, 0.3);
+            font-size: 16px;
+            width:70%;
+            margin-right: 20px;
           }
-      
-          form {
-            width: 50%;
+    
+          button {
+            border: none;
+            border-radius: 20px;
+            background-color: #50a72d;
+            color: #fff;
+            font-weight: bold;
+            font-size: 16px;
             height: 45px;
-            padding: 5px;
-            margin-top: 10px;
-            overflow: hidden;
-      
-            input[type="text"] {
-              padding: 10px;
-              border-radius: 20px;
-              border: none;
-              background-color: #ffffff;
-              box-shadow: 0 0 5px rgba(173, 162, 162, 0.3);
-              font-size: 16px;
-              width:80% ;
-            }
-      
-            button {
-              border: none;
-              border-radius: 20px;
-              background-color: #3498db;
-              color: #fff;
-              font-weight: bold;
-              font-size: 16px;
-              width: 20%;
-              height: 45px;
-            }
           }
         }
       }
-      
+    }
+    
 }
 
-
-  
+}
