--- a/src/Components/Chat/css/chatComponentStyle.css
+++ b/src/Components/Chat/css/chatComponentStyle.css
@@ -150,35 +150,39 @@ main section .chat-room form button {
   }
   main section .chat-room {
     width: 50%;
-    height: 70%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
   }
-  main section form {
-    width: 50%;
+  main section .chat-room .messages {
+    margin-top: 30px;
+  }
+  main section .chat-room form {
     height: 45px;
     padding: 5px;
-    margin-top: 10px;
-    overflow: hidden;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
+    justify-content: space-evenly;
   }
-  main section form input[type=text] {
+  main section .chat-room form input[type=text] {
     padding: 10px;
     border-radius: 20px;
     border: none;
     background-color: #ffffff;
     box-shadow: 0 0 5px rgba(173, 162, 162, 0.3);
     font-size: 16px;
-    width: 80%;
+    width: 70%;
+    margin-right: 20px;
   }
-  main section form button {
+  main section .chat-room form button {
     border: none;
     border-radius: 20px;
-    background-color: #3498db;
+    background-color: #50a72d;
     color: #fff;
     font-weight: bold;
     font-size: 16px;
-    width: 20%;
     height: 45px;
   }
 }/*# sourceMappingURL=chatComponentStyle.css.map */
