--- a/src/Components/Chat/css/chatComponentStyle.scss
+++ b/src/Components/Chat/css/chatComponentStyle.scss
@@ -177,6 +177,11 @@
           overflow-y: hidden;        
          .messages{
           margin-top: 30px;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          
          }
         
     
